Release ...
* New versions of the 'mail' and 'spell' utilities have been introduced;
  they have been derived from OpenSolaris code.
* The 'bdiff, 'bfs', 'dircmp', 'fmtmsg', 'getopt', and 'mvdir' utilities
  are now available (derived from OpenSolaris code).
* Both Unix lex and flex can now be used for building the tools.
* xargs: The '-l' and '-L' options override previous occurrences of the
  '-i' or '-I' option.
* awk (POSIX version): A command line argument that contains a '=' character
  but starts with a digit is no longer treated as a variable assignment.

Release 050612
* Fixed a double free() call that could occur in multibyte locales with
  all programs using traditional (simple) regular expressions.
* man: Handle .so requests that do not contain a path to the target file.
* tar: Fixed a NULL pointer dereference that occured if the 'b' option was
  given without a corresponding argument.
* tar: Immediately issue an error if calls to read() for an input archive
  return fewer bytes than the first one and the archive has not yet been
  processed completely. This condition was previously not detected in the
  rare case where the previous contents of the input buffer accidentally
  formed a valid continuation of the archive.
* shl: The external 'ps' command is now used for the 'layers -l' command.
* cp: An '-a' option was added that preserves hard links and all attributes
  during a recursive copy.
* tail: 'tail -f -n 0 file' now skips to the end of existing data before
  waiting for changes, as demanded by POSIX interpretation XCU ERN 62.
  'tail -0f file' continues the historical behavior of printing existing
  data first. (Issue reported by Pierre Gentile.)

Release 050411
* diff: The -p option (print name of surrounding C function) has been added.
* diff: The -X option (ignore patterns from file) has been added.
* diff: The combination of the -h and -r options works again.
* ps: Some values (e.g. LTIME) were determined incorrectly with the -L option